@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-31T01:10:48Z",
+  "timestamp" : "2022-06-01T01:18:13Z",
   "count_outdated" : 97,
   "uniques_outdated" : 62,
-  "count" : 105,
-  "uniques" : 69,
+  "count" : 106,
+  "uniques" : 70,
   "clones" : [
     {
       "timestamp": "2022-05-19T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 6, 6 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
