@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 6,
   "clones": [
     {
@@ -16,6 +16,11 @@
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 6,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-05-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
